fixed wrapping issue with podcast search field

--- a/public/stylesheets/application.scss
+++ b/public/stylesheets/application.scss
@@ -596,7 +596,7 @@ ul#filter {
       &:hover {
         border: 1px solid #555555; } } }
   li:last-child {
-    width: 263px !important;
+    width: 240px !important;
   }
   li.current {
     span {
